<resources>
    <string name="app_name">亿投上刊工具</string>
    <string name="bottom_text_1">工作</string>
    <string name="bottom_text_2">设置</string>

    <string name="title_user_info">设置</string>
    <string name="title_my_map">小区地图</string>
    <string name="title_my_offline_map">离线地图</string>
    <string name="title_apartment_point">小区点位</string>
    <string name="title_apartment_info">小区总览</string>
    <string name="title_synchronize">上传同步</string>
    <string name="title_image_cache">任务缓存</string>
    <string name="title_fix_error">上传修复</string>
    <string name="title_un_upload_point">未上传点位</string>
    <string name="loading_message">正在加载…</string>
    <string name="no_network">网络不给力！~请稍后再试</string>

    <string name="btn_text_login">登录</string>
    <string name="btn_text_logout">退出登录</string>
    <string name="btn_text_call">拨打</string>
    <string name="btn_text_confirm">确定</string>
    <string name="btn_text_cancel">取消</string>
    <string name="btn_text_submit">提交</string>
    <string name="btn_text_clear">清空</string>
    <string name="btn_text_edit">修改</string>
    <string name="btn_text_save">保存</string>
    <string name="btn_text_edit_record">修改记录</string>
    <string name="rbtn_text_today">今天</string>
    <string name="rbtn_text_tomorrow">明天</string>
    <string name="rbtn_text_toweek">本周</string>

    <string name="btn_text_shangkan_done">上刊完成</string>
    <string name="btn_text_cant_enter">无法进入</string>
    <string name="btn_text_report_question">报修</string>
    <string name="btn_text_show_webview">显示详情</string>

    <string name="quit_redo">再按一次退出程序</string>

    <string name="label_kan_1">本月已上刊</string>
    <string name="label_kan_2">本月未完成</string>
    <string name="label_kan_3">本月超时</string>

    <string name="dialog_exit_save">保存到本地</string>

    <string name="hint_phone">请输入您的手机号码...</string>
    <string name="hint_password">请输入密码...</string>

    <!-- 版本更新 -->
    <string name="no_update_version">当前版本是最新版本</string>
    <string name="update_version">版本更新</string>
    <string name="update_message">发现新版本%1$s，是否需要更新</string>
    <string name="download">更新</string>
    <string name="later">忽略</string>
    <string name="exit">退出</string>
    <!-- 版本更新 -->

    <!-- toast -->
    <string name="toast_sdcard_error">请检查SD卡是否挂载</string>

    <string name="camera_denied">没有读取相机权限</string>
    <string name="sdcard_denied">没有读取sd卡权限</string>


    <!-- dialog -->
    <string name="dialog_title_add_photo">添加图片</string>
    <string name="dialog_title_del_photo">确定删除图片吗?</string>
    <string name="dialog_title_submit_point">确定提交吗?</string>
    <string name="dialog_title_change_edit_mode">确定修改吗?</string>
    <string name="dialog_title_submit_card">确定修改门卡密码吗?</string>
    <string name="dialog_title_synchronize">上传消耗流量,确定继续吗?</string>
    <string name="dialog_title_synchronize_clean">请确认所有点位是否已提交,删除图片后无法撤销。</string>
    <string name="dialog_title_synchronize_start">开始上传,请稍后刷新状态!</string>
    <string name="dialog_title_submit_gate_photo">确定修改小区照片吗?</string>
    <string name="dialog_map_title">请选择地图导航</string>
    <string name="dialog_title_clear_cache">确定删除所有图片缓存吗?</string>


    <!-- picture selector -->
    <string name="images">照片</string>
    <string name="all_image">所有图片</string>
    <string name="done">完成</string>
    <string name="over_max_count_tips">最多选择%1$d张图片</string>
    <string name="done_with_count">完成(%1$d/%2$d)</string>
</resources>
