<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/line_color_grey"
        />
    <LinearLayout
        android:id="@+id/ll_undone_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/bt_done"
            android:layout_width="155dp"
            android:layout_height="35dp"
            style="@style/LogoutButtonStyle"
            android:layout_gravity="center"
            android:text="@string/btn_text_shangkan_done"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/bt_cant_enter"
            android:layout_width="90dp"
            android:layout_height="35dp"
            style="@style/GreenButtonStyle"
            android:layout_gravity="center"
            android:text="@string/btn_text_cant_enter"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/bt_report_question"
            android:layout_width="90dp"
            android:layout_height="35dp"
            style="@style/RedButtonStyle"
            android:layout_gravity="center"
            android:text="@string/btn_text_report_question"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/ll_done_mode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@color/white"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
        <Button
            android:id="@+id/bt_has_done"
            android:layout_width="90dp"
            android:layout_height="35dp"
            style="@style/GreyButtonStyle"
            android:layout_gravity="center"
            android:text="@string/btn_text_cant_enter"/>
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp" />
    </LinearLayout>

</LinearLayout>
