<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">
    <!--<ImageView-->
        <!--android:id="@+id/iv_back"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/login_back_btn"-->
        <!--android:visibility="invisible"/>-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="120dp"
        android:orientation="vertical"
        android:background="@drawable/login_input_background">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_single_height"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_account_icon"/>

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="phone"
                android:maxLength="11"
                android:digits="1234567890"
                android:hint="@string/hint_phone"
                style="@style/EditTextStyle"/>

        </LinearLayout>
        <View android:layout_width="match_parent"
            android:layout_height="@dimen/line_height"
            android:background="@color/line_color"
            android:layout_marginLeft="30dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/panel_single_height"
            android:orientation="horizontal"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingRight="5dp"
            android:paddingBottom="2dp"
            android:gravity="center_vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/login_password_icon"/>

            <EditText
                android:id="@+id/et_password"
                android:maxLength="12"
                android:digits="qwertyuiopasdfghjklzxcvbnm1234567890QWERTYUIOPASDFGHJKLZXCVBNM"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                style="@style/EditTextStyle"/>

        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="45dp"
        android:layout_marginRight="45dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/bt_submit"
            style="@style/LoginButtonStyle"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:textSize="20sp"
            android:text="@string/btn_text_login"/>



    </LinearLayout>



</LinearLayout>